--- a/app/src/main/res/layout/table_docs_fragment.xml
+++ b/app/src/main/res/layout/table_docs_fragment.xml
@@ -6,7 +6,45 @@
     android:background="@android:color/white"
     android:orientation="vertical">
 
+
+    <LinearLayout
+        android:id="@+id/back_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_back_arrow"/>
+
+        <TextView
+            android:paddingStart="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/backToCabinet"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"/>
+
+    </LinearLayout>
+
+
+    <View
+        android:id="@+id/view"
+        android:layout_below="@+id/back_btn"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#10000000" />
+
+
     <ScrollView
+        android:layout_below="@+id/back_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -19,13 +57,15 @@
             android:paddingBottom="20dp">
 
             <TextView
+                android:id="@+id/status_driver_signup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:fontFamily="@font/roboto"
+                android:textAlignment="center"
                 android:text="@string/weCheckDocs"
-                android:textColor="@android:color/black"
-                android:textSize="24sp"
+                android:textColor="@color/colorBlue"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
 
@@ -49,6 +89,7 @@
 
                         <ImageView
                             android:id="@+id/doc1"
+                            android:tag="1"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_marginStart="10dp"
@@ -86,6 +127,7 @@
 
                         <ImageView
                             android:id="@+id/doc2"
+                            android:tag="2"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_marginStart="10dp"
@@ -129,6 +171,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:tag="3"
                             android:id="@+id/doc3"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
@@ -166,6 +209,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:tag="4"
                             android:id="@+id/doc4"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
@@ -210,6 +254,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:tag="5"
                             android:id="@+id/doc5"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
@@ -247,6 +292,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:tag="6"
                             android:id="@+id/doc6"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
@@ -291,6 +337,7 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:tag="7"
                             android:id="@+id/doc7"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
@@ -362,7 +409,7 @@
                 android:text="@string/reshootDoc"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="22sp" />
+                android:textSize="20sp" />
 
 
             <LinearLayout
@@ -406,7 +453,7 @@
 
 
         <View
-            android:id="@+id/on_view_cancel_reason"
+            android:id="@+id/on_view_table"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="0"
