--- a/app/src/main/res/layout/signup_car_info_fragment.xml
+++ b/app/src/main/res/layout/signup_car_info_fragment.xml
@@ -109,7 +109,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/complete_signup"
+            android:id="@+id/next_btn"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
@@ -118,7 +118,7 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/bg_btn_gray"
             android:fontFamily="@font/roboto"
-            android:text="@string/completeSignup"
+            android:text="@string/continue_signup"
             android:textAllCaps="false"
             android:textSize="16sp" />
 
