--- a/app/src/main/res/layout/check_correct_doc_fragment.xml
+++ b/app/src/main/res/layout/check_correct_doc_fragment.xml
@@ -12,7 +12,6 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
-        android:text="Убедитесь, что четко видно VIN, номер документа и другие данные"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="17sp" />
@@ -24,8 +23,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="60dp"
         android:layout_weight="1"
-        android:scaleType="centerCrop"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray"
+        android:scaleType="centerCrop" />
 
 
     <LinearLayout
@@ -34,9 +33,7 @@
         android:background="#2B2B2B"
         android:orientation="horizontal"
         android:paddingStart="15dp"
-        android:paddingTop="50dp"
         android:paddingEnd="15dp"
-        android:paddingBottom="30dp"
         android:weightSum="1">
 
         <TextView
@@ -44,6 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
+            android:paddingTop="50dp"
+            android:paddingBottom="30dp"
             android:text="@string/reshoot_photo"
             android:textColor="#CECECE"
             android:textSize="14sp" />
@@ -55,6 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:gravity="end"
+            android:paddingTop="50dp"
+            android:paddingBottom="30dp"
             android:text="@string/send_photo"
             android:textColor="@android:color/white"
             android:textSize="14sp" />
