--- a/app/src/main/res/layout/table_docs_fragment.xml
+++ b/app/src/main/res/layout/table_docs_fragment.xml
@@ -11,42 +11,42 @@
         android:id="@+id/back_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingStart="15dp"
-        android:paddingEnd="15dp"
         android:paddingTop="18dp"
-        android:paddingBottom="18dp"
-        android:gravity="center_vertical">
+        android:paddingEnd="15dp"
+        android:paddingBottom="18dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_back_arrow"/>
+            android:src="@drawable/ic_back_arrow" />
 
         <TextView
-            android:paddingStart="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="15dp"
             android:text="@string/backToCabinet"
-            android:textStyle="bold"
             android:textColor="@android:color/black"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
 
     <View
         android:id="@+id/view"
-        android:layout_below="@+id/back_btn"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_below="@+id/back_btn"
         android:background="#10000000" />
 
 
     <ScrollView
-        android:layout_below="@+id/back_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/back_btn">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,8 +62,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/roboto"
-                android:textAlignment="center"
                 android:text="@string/weCheckDocs"
+                android:textAlignment="center"
                 android:textColor="@color/colorBlue"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -88,17 +88,16 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:id="@+id/doc1"
-                            android:tag="1"
+                            android:id="@+id/passport"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ava2" />
+                            android:background="#C4C4C4"
+                            android:scaleType="centerCrop" />
 
                         <ImageView
-                            android:id="@+id/status_doc1"
+                            android:id="@+id/status_passport"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
@@ -106,9 +105,10 @@
 
 
                         <TextView
+                            android:id="@+id/text_passport"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/doc1"
+                            android:layout_below="@id/passport"
                             android:layout_marginTop="10dp"
                             android:text="@string/passport"
                             android:textAlignment="center"
@@ -126,26 +126,26 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:id="@+id/doc2"
-                            android:tag="2"
+                            android:id="@+id/passport_address"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ava2" />
+                            android:background="#C4C4C4"
+                            android:scaleType="centerCrop" />
 
                         <ImageView
-                            android:id="@+id/status_doc2"
+                            android:id="@+id/status_passport_address"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
                             android:src="@drawable/ic_red_cross" />
 
                         <TextView
+                            android:id="@+id/text_passport_address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/doc2"
+                            android:layout_below="@id/passport_address"
                             android:layout_marginTop="10dp"
                             android:text="@string/passportAddress"
                             android:textAlignment="center"
@@ -171,17 +171,16 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:tag="3"
-                            android:id="@+id/doc3"
+                            android:id="@+id/self_passport"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ava2" />
+                            android:background="#C4C4C4"
+                            android:scaleType="centerCrop" />
 
                         <ImageView
-                            android:id="@+id/status_doc3"
+                            android:id="@+id/status_self_passport"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
@@ -189,9 +188,10 @@
 
 
                         <TextView
+                            android:id="@+id/text_self_passport"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/doc3"
+                            android:layout_below="@id/self_passport"
                             android:layout_marginTop="10dp"
                             android:text="@string/selfWithPassport"
                             android:textAlignment="center"
@@ -209,26 +209,26 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:tag="4"
-                            android:id="@+id/doc4"
+                            android:id="@+id/driver_doc_front"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ava2" />
+                            android:background="#C4C4C4"
+                            android:scaleType="centerCrop" />
 
                         <ImageView
-                            android:id="@+id/status_doc4"
+                            android:id="@+id/status_driver_doc_front"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
                             android:src="@drawable/ic_red_cross" />
 
                         <TextView
+                            android:id="@+id/text_driver_doc_front"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/doc4"
+                            android:layout_below="@id/driver_doc_front"
                             android:layout_marginTop="10dp"
                             android:text="@string/driverDoc"
                             android:textAlignment="center"
@@ -254,17 +254,16 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:tag="5"
-                            android:id="@+id/doc5"
+                            android:id="@+id/driver_doc_back"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ava2" />
+                            android:background="#C4C4C4"
+                            android:scaleType="centerCrop" />
 
                         <ImageView
-                            android:id="@+id/status_doc5"
+                            android:id="@+id/status_driver_doc_back"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
@@ -272,9 +271,10 @@
 
 
                         <TextView
+                            android:id="@+id/text_driver_doc_back"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/doc5"
+                            android:layout_below="@id/driver_doc_back"
                             android:layout_marginTop="10dp"
                             android:text="@string/backDriverDoc"
                             android:textAlignment="center"
@@ -292,26 +292,26 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:tag="6"
-                            android:id="@+id/doc6"
+                            android:id="@+id/sts_front"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ava2" />
+                            android:background="#C4C4C4"
+                            android:scaleType="centerCrop" />
 
                         <ImageView
-                            android:id="@+id/status_doc6"
+                            android:id="@+id/status_sts_front"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
                             android:src="@drawable/ic_red_cross" />
 
                         <TextView
+                            android:id="@+id/text_sts_front"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/doc6"
+                            android:layout_below="@id/sts_front"
                             android:layout_marginTop="10dp"
                             android:text="@string/frontSTS"
                             android:textAlignment="center"
@@ -337,17 +337,16 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:tag="7"
-                            android:id="@+id/doc7"
+                            android:id="@+id/sts_back"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ava2" />
+                            android:background="#C4C4C4"
+                            android:scaleType="centerCrop" />
 
                         <ImageView
-                            android:id="@+id/status_doc7"
+                            android:id="@+id/status_sts_back"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
@@ -355,9 +354,10 @@
 
 
                         <TextView
+                            android:id="@+id/text_sts_back"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/doc7"
+                            android:layout_below="@id/sts_back"
                             android:layout_marginTop="10dp"
                             android:text="@string/backSTS"
                             android:textAlignment="center"
@@ -406,6 +406,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="25dp"
                 android:fontFamily="@font/roboto"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
                 android:text="@string/reshootDoc"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
