--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -34,7 +34,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
-                android:text="Глеб Глазков"
                 android:textColor="@android:color/black"
                 android:textSize="24sp" />
 
@@ -47,7 +46,6 @@
                 android:drawableStart="@drawable/ic_star"
                 android:drawablePadding="5dp"
                 android:fontFamily="@font/roboto"
-                android:text="4.6"
                 android:textColor="#50000000"
                 android:textSize="16sp" />
 
@@ -58,7 +56,7 @@
             android:id="@+id/img_user"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/ava" />
+            android:src="@drawable/ic_default_ava" />
 
     </LinearLayout>
 
@@ -135,17 +133,6 @@
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
-
-            <TextView
-                android:id="@+id/notifications"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/ic_arrow_right"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:text="@string/notifications"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
 
 
             <TextView
