add profile notifications, switch buttons, check email valid

--- a/app/src/main/res/layout/profile_detail_activity.xml
+++ b/app/src/main/res/layout/profile_detail_activity.xml
@@ -9,6 +9,28 @@
     android:orientation="vertical"
     tools:context=".view.passanger.profile.ProfileDetailView">
 
+    <TextView
+        android:id="@+id/notification"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:alpha="0.0"
+        android:background="@drawable/bg_notification"
+        android:elevation="1px"
+        android:fontFamily="@font/roboto"
+        android:padding="10dp"
+        android:text="@string/dataSaved"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:translationZ="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+
     <LinearLayout
         android:id="@+id/back_btn"
         android:layout_width="match_parent"
@@ -29,7 +51,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="15dp"
+            android:layout_marginStart="15dp"
             android:text="@string/profileDetail"
             android:textColor="@android:color/black"
             android:textSize="18sp"
@@ -342,7 +364,6 @@
         android:id="@+id/logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent">
@@ -359,8 +380,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
-            android:text="@string/logout"
             android:padding="20dp"
+            android:text="@string/logout"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
@@ -445,6 +466,47 @@
         </LinearLayout>
 
 
+        <LinearLayout
+            android:id="@+id/error_bottom_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_corners_layout"
+            android:elevation="10dp"
+            android:orientation="vertical"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:behavior_peekHeight="0dp"
+            app:layout_behavior=".view.passanger.getdriver.MBottomSheet">
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/fillCorrectData"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
+
+
+            <Button
+                android:id="@+id/error_btn"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/bg_btn_blue"
+                android:fontFamily="@font/roboto"
+                android:shadowColor="@color/colorBlue"
+                android:text="@string/ok"
+                android:textAllCaps="false"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+
         <View
             android:id="@+id/on_view_profile"
             android:layout_width="match_parent"
@@ -457,4 +519,5 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
 
