--- a/app/src/main/res/layout/add_bank_card_activity.xml
+++ b/app/src/main/res/layout/add_bank_card_activity.xml
@@ -28,7 +28,7 @@
         android:text="@string/addBankCard"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textFontWeight="600"
+        android:textStyle="bold"
         android:textSize="18sp" />
 
 
@@ -155,7 +155,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/add_card"
+                android:id="@+id/btn_done"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="14dp"
