--- a/app/src/main/res/layout/offer_price_activity.xml
+++ b/app/src/main/res/layout/offer_price_activity.xml
@@ -81,7 +81,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/offer"
+            android:id="@+id/btn_done"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="14dp"
