--- a/app/src/main/res/layout/create_ride_layout.xml
+++ b/app/src/main/res/layout/create_ride_layout.xml
@@ -117,6 +117,7 @@
                         android:fontFamily="@font/roboto"
                         android:hint="@string/from"
                         android:padding="5dp"
+                        android:inputType="textCapSentences"
                         android:paddingStart="0dp"
                         android:singleLine="true"
                         android:textColor="@android:color/black"
@@ -174,6 +175,7 @@
                         android:hint="@string/to"
                         android:imeOptions="actionDone"
                         android:padding="5dp"
+                        android:inputType="textCapSentences"
                         android:paddingStart="0dp"
                         android:singleLine="true"
                         android:textColor="@android:color/black"
