--- a/app/src/main/res/layout/create_ride_fragment.xml
+++ b/app/src/main/res/layout/create_ride_fragment.xml
@@ -45,6 +45,24 @@
         layout="@layout/create_ride_layout" />
 
 
+    <ImageButton
+        android:id="@+id/show_route"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/bg_back_btn"
+        android:elevation="10dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="14dp"
+        android:paddingBottom="14dp"
+        android:visibility="gone"
+        android:src="@drawable/ic_show_route"
+        app:layout_constraintBottom_toTopOf="@+id/container_detail_ride"
+        app:layout_constraintRight_toRightOf="parent" />
+
+
     <LinearLayout
         android:id="@+id/container_detail_ride"
         android:layout_width="match_parent"
@@ -52,8 +70,8 @@
         android:layout_alignParentBottom="true"
         android:background="@drawable/bg_corners_layout"
         android:orientation="vertical"
-        android:translationY="-8dp"
         android:visibility="gone"
+        android:translationY="-8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/map">
 
