--- a/app/src/main/res/layout/create_ride_layout.xml
+++ b/app/src/main/res/layout/create_ride_layout.xml
@@ -25,18 +25,18 @@
         android:id="@+id/center_position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="50dp"
         android:src="@drawable/ic_map_marker" />
 
 
     <RelativeLayout
         android:id="@+id/bottom_sheet_addresses"
-        app:behavior_peekHeight="190dp"
-        app:layout_behavior=".view.passanger.getdriver.MBottomSheet"
         android:layout_width="match_parent"
         android:layout_height="650dp"
-        android:background="@drawable/ic_bottom_sheet_collapsed">
+        android:background="@drawable/ic_bottom_sheet_collapsed"
+        app:behavior_peekHeight="190dp"
+        app:layout_behavior=".view.passanger.getdriver.MBottomSheet">
 
 
         <ImageView
@@ -59,13 +59,13 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:background="@drawable/bg_inputs_layout"
+            android:clickable="true"
             android:elevation="10dp"
             android:focusable="true"
-            android:clickable="true"
             android:orientation="horizontal"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:translationZ="5dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:translationZ="7dp"
             android:visibility="visible">
 
 
@@ -104,9 +104,10 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="55dp"
                     android:orientation="horizontal"
                     android:weightSum="1">
+
 
                     <EditText
                         android:id="@+id/from_adr"
@@ -116,10 +117,10 @@
                         android:background="@null"
                         android:fontFamily="@font/roboto"
                         android:hint="@string/from"
+                        android:inputType="textCapSentences|textMultiLine"
+                        android:maxLines="2"
                         android:padding="5dp"
-                        android:inputType="textCapSentences"
                         android:paddingStart="0dp"
-                        android:singleLine="true"
                         android:textColor="@android:color/black"
                         android:textColorHint="#70000000"
                         android:textCursorDrawable="@drawable/bg_color_cursor"
@@ -143,6 +144,7 @@
                         android:id="@+id/btn_map_from"
                         android:layout_width="70dp"
                         android:layout_height="match_parent"
+                        android:layout_marginEnd="2dp"
                         android:background="@drawable/bg_inputs_layout_map_btn"
                         android:gravity="center"
                         android:text="@string/map"
@@ -161,7 +163,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="55dp"
                     android:orientation="horizontal"
                     android:weightSum="1">
 
@@ -174,10 +176,10 @@
                         android:fontFamily="@font/roboto"
                         android:hint="@string/to"
                         android:imeOptions="actionDone"
-                        android:padding="5dp"
                         android:inputType="textCapSentences"
+                        android:maxLines="2"
+                        android:padding="5dp"
                         android:paddingStart="0dp"
-                        android:singleLine="true"
                         android:textColor="@android:color/black"
                         android:textColorHint="#70000000"
                         android:textCursorDrawable="@drawable/bg_color_cursor"
@@ -202,6 +204,7 @@
                         android:id="@+id/btn_map_to"
                         android:layout_width="70dp"
                         android:layout_height="match_parent"
+                        android:layout_marginEnd="2dp"
                         android:background="@drawable/bg_inputs_layout_map_btn"
                         android:gravity="center"
                         android:text="@string/map"
@@ -289,10 +292,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/addresses_list"
-            android:alpha="0.0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/main_addresses_layout" />
+            android:layout_below="@+id/main_addresses_layout"
+            android:alpha="0.0" />
 
 
     </RelativeLayout>
