--- a/app/src/main/res/layout/create_ride_layout.xml
+++ b/app/src/main/res/layout/create_ride_layout.xml
@@ -26,7 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="50dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginBottom="55dp"
         android:src="@drawable/ic_map_marker" />
 
 
