--- a/app/src/main/res/layout/driver_info_layout.xml
+++ b/app/src/main/res/layout/driver_info_layout.xml
@@ -13,19 +13,18 @@
         android:layout_alignParentBottom="true"
         android:background="@drawable/bg_corners_layout"
         android:elevation="30dp"
-        android:orientation="vertical"
-        android:paddingTop="20dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/status_driver"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:text="@string/driverInWay"
                 android:textAlignment="center"
@@ -49,9 +48,10 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:gravity="center"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="15dp"
+                android:gravity="bottom"
                 android:orientation="vertical">
 
                 <ImageView
@@ -62,9 +62,10 @@
 
                 <TextView
                     android:id="@+id/driver_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:maxWidth="150dp"
                     android:text="Николай"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
@@ -113,27 +114,65 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <ImageButton
-                        android:id="@+id/phone_call_driver"
-                        android:layout_width="wrap_content"
+                    <RelativeLayout
+                        android:layout_width="110dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginEnd="10dp"
-                        android:background="@drawable/bg_back_btn"
-                        android:elevation="7dp"
-                        android:padding="17dp"
-                        android:src="@drawable/ic_call_phone_driver" />
+                        android:orientation="vertical"
+                        android:paddingStart="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingEnd="15dp"
+                        android:paddingBottom="15dp">
 
-                    <ImageButton
-                        android:id="@+id/message_driver"
-                        android:layout_width="wrap_content"
+                        <ImageButton
+                            android:id="@+id/phone_call_driver"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:background="@drawable/bg_back_btn"
+                            android:elevation="7dp"
+                            android:padding="18dp"
+                            android:src="@drawable/ic_call_phone_driver" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/phone_call_driver"
+                            android:text="@string/call"
+                            android:textAlignment="center"
+                            android:textColor="#2B2B2B"
+                            android:textSize="12sp" />
+                    </RelativeLayout>
+
+
+                    <RelativeLayout
+                        android:layout_width="120dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
-                        android:background="@drawable/bg_back_btn"
-                        android:elevation="7dp"
-                        android:padding="17dp"
-                        android:src="@drawable/is_message_driver" />
+                        android:orientation="vertical"
+                        android:paddingStart="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingEnd="15dp"
+                        android:paddingBottom="15dp">
+
+                        <ImageButton
+                            android:id="@+id/message_driver"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:background="@drawable/bg_back_btn"
+                            android:elevation="7dp"
+                            android:padding="17dp"
+                            android:src="@drawable/is_message_driver" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/message_driver"
+                            android:text="@string/message"
+                            android:textAlignment="center"
+                            android:textColor="#2B2B2B"
+                            android:textSize="12sp" />
+                    </RelativeLayout>
+
                 </LinearLayout>
 
 
